--- a/css/facebook_custom_style_sfc.css
+++ b/css/facebook_custom_style_sfc.css
@@ -16,6 +16,8 @@
     background: url(https://cdn3.iconfinder.com/data/icons/picons-social/57/06-facebook-64.png) center center no-repeat rgb(44, 65, 102) !important;
 } */
 
+/* ## black facebook icon */
+/* 
 #sfx_badge_logo {
     position: relative !important;
     overflow: hidden !important;
@@ -49,4 +51,36 @@
     right: 3%;
     width: 60%;
     height: 15%;
+} */
+
+#sfx_badge_logo {
+    display: block;
+    position: relative;
+    box-sizing: border-box;
+    transform: scale(var(--ggs,1));
+    width: 18px;
+    height: 22px;
+    border: 2px solid;
+    border-radius: 3px
+}
+#sfx_badge_logo::after,
+#sfx_badge_logo::before {
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute;
+    left: 2px;
+    background: currentColor;
+    border-radius: 1px
+}
+#sfx_badge_logo::before {
+    bottom: 2px;
+    width: 10px;
+    height: 10px;
+    opacity: .5
+}
+#sfx_badge_logo::after {
+    top: 2px;
+    width: 6px;
+    height: 2px
 }
