--- a/css/facebook_custom_style_sfc.css
+++ b/css/facebook_custom_style_sfc.css
@@ -176,15 +176,11 @@ textarea#sfx_user_data{
     max-width: 2400px;
 }
 
-div[role="main"] > div > div > div:first-child {
-  width: 1280px;
-}
-
-div[role="main"] > div > div > div > div > div:first-child {
+div[role="main"] > div > div > div > div:last-child > div:first-child {
   width: 1220px;
 }
 
 @media (min-height: 790px)
-div[role="main"] > div > div > div > div > div:first-child {
+div[role="main"] > div > div > div > div:last-child > div:first-child {
   width: 1220px;
 }
