--- a/css/facebook_custom_style_sfc.css
+++ b/css/facebook_custom_style_sfc.css
@@ -88,6 +88,15 @@
     height: 2px
 }
 
+#sfx_options_dialog{
+    width: 100%;
+    height: 100vh;
+}
+
+#sfx_options_dialog_header{
+    max-height:30px;
+}
+
 #sfx_badge_menu_wrap, #sfx_options_dialog, #sfx_options_dialog_body, 
 .sfx_options_dialog_option_description, .sfx_options_dialog_panel_header, .sfx_options_dialog_option_title, .sfx_options_dialog_section {
     color: #ffffff !important;
@@ -152,7 +161,7 @@
     border: 1px solid gray;
 }
 
-.sfx_options_dialog_option_action{
+.sfx_options_dialog_option_action, .sfx_options_dialog_table td[style="text-align:center;"]{
     vertical-align: middle !important;
     background-color: #242526 !important;
 }
