--- a/css/facebook_custom_style_sfc.css
+++ b/css/facebook_custom_style_sfc.css
@@ -219,7 +219,7 @@ div[role="main"]{
     max-width: 1240px;
 }
 
-.__fb-dark-mode div[role="main"]{
+.__fb-dark-mode > div > div[role="main"]{
     left: 10%;
 }
 
