--- a/css/facebook_custom_style_sfc.css
+++ b/css/facebook_custom_style_sfc.css
@@ -236,6 +236,12 @@ div[role="main"] > div > div > div > div:nth-child(2), div[role="main"] > div > 
 div[role="main"] > div > div > div > div:last-child > div:first-child {
   width: 1220px;
 }
+
+.x1yztbdb > div {
+    width: initial;
+    max-width: 590px;
+}
+
 /* 
 @media (min-height: 790px)
 div[role="main"] > div > div > div > div:last-child > div:first-child {
